# cuda-mc-chess-engine

./: .gitignore  OPTIMIZATION_REPORT.md  README.md  SEQUENTIAL_PROGRESS_REPORT.md  chess_engine_optimized.cpp  chess_engine_parallelized.cpp  chess_parallelization.cpp  history.h  killer_move.h  meson.build  meson.options  tests.cpp  thread_local_data.h  transposition_table.h  tt_parallel.h
chess-parallelization.xcodeproj/: project.pbxproj
chess-parallelization.xcodeproj/project.xcworkspace/xcuserdata/nedimbecic.xcuserdatad/: UserInterfaceState.xcuserstate
comparison_results/: comparison_20251208_113132.csv  comparison_20251208_182145.csv  report_20251208_113132.txt  report_20251208_182145.txt
cpu/: README.md  meson.build  meson.options
cpu/include/: constants.h  history.h  killer_move.h  thread_local_data.h  transposition_table.h  tt_parallel.h
cpu/src/: chess_engine_parallelized.cpp  chess_sequential.cpp
cpu/tests/: test_suite.cpp  tests.cpp
gpu/: .gitignore  COLAB_GUIDE.md  COLAB_TEST_INSTRUCTIONS.md  CUDA_SETUP.md  IMPLEMENTATION_SUMMARY.md  Improvements_Documentation.md  Makefile  NEXT_STEPS.md  PUCT_MCTS_Colab_Tests.ipynb  PUCT_TESTS_README.md  QUICKSTART.md  README.md  README_PUCT.md  REFERENCE_CARD.md  TESTING_QUICK_START.md  build.bat  build.sh  build_and_test.bat  build_notes.txt  chesscuda(1).py  improvements.txt  main_advanced.cpp  main_gpu.cpp  monte_carlo_advanced.cpp  monte_carlo_advanced.hpp  monte_carlo_advanced_kernel.cu  monte_carlo_advanced_kernel.cuh  monte_carlo_advanced_launcher.cu  monte_carlo_gpu.cpp  monte_carlo_gpu.hpp  monte_carlo_kernel.cu
gpu/docs/: BUG_FIX_PLAN.md  CHANGELOG.md  CHANGELOG_v1.md  GPU_MCTS_ARCHITECTURE.md  IMPROVEMENT_ROADMAP.md  REUSABILITY_ANALYSIS.md
gpu/include/: chess_types.cuh  cpu_movegen.h  evaluation.h  fen.h  kernel_launchers.h  mcts.h  move_gen.cuh  puct_mcts.h  search_config.h
gpu/include/kernels/: common.cuh  evaluation.cuh  movegen.cuh  playouts.cuh  tactical.cuh
gpu/src/: cpu_movegen.cpp  gpu_chess_bitops.cuh  gpu_chess_movegen.cuh  gpu_chess_position.cuh  gpu_chess_test.cu  gpu_chess_types.cuh  gpu_kernels.cu  init_tables.cu  main.cpp  mcts.cpp  puct_mcts.cpp
gpu/src/kernels/: evaluation.cu  kernel_launchers.cu  movegen.cu  playouts.cu  tactical_search.cu
gpu/test/: gpu_chess_test.cpp  test_flip_unit.cu  test_phantom_castle.cu
gpu/tests/: evaluation_tests.cpp  test_bratko_kopec.cpp  test_positions.h  test_puct_mcts.cpp  test_runner.cpp
gpu/v1_reference/: main_advanced_v1.cpp  monte_carlo_advanced_kernel_v1.cu  monte_carlo_advanced_kernel_v1.cuh  monte_carlo_advanced_types_v1.hpp  monte_carlo_advanced_v1.cpp  monte_carlo_advanced_v1.hpp
include/: test_positions.h  transposition_table.h
profile_results_20251207_170217/: memory_leaks.txt  summary_report.txt
scripts/: analyze_profile.py  chess_profiler.sh  compare_versions.sh  run_benchmarks.py  run_comparison.sh  run_comparison_csv.sh
src/: chess_engine_parallelized.cpp  chess_sequential.cpp
tests/: ARCHITECTURE.md  CMakeLists.txt  COLAB_MINIMAL.md  COLAB_TUTORIAL.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  TESTS_OVERVIEW.md  test_suite.cpp  tests.cpp
tests/include/: benchmark_utils.h  csv_writer.h  engine_interface.h  test_positions.h
tests/src/: benchmark_fixed_time.cpp  benchmark_matches.cpp  benchmark_stockfish.cpp  benchmark_throughput.cpp  cpu_engine_wrapper.cpp  gpu_engine_wrapper.cpp
versions/: parallel_v1  parallel_v3  sequential_v1  sequential_v3
versions/chess_versions/: parallel_v1  sequential_v1  sequential_v3
